# guruji

./: .breakpoints  .gitignore.txt  README.md  analytics.json  analytics.py  checks.py  cli.py  globals.py  main.py  pyproject.toml  sibEmail.py  sibKey.txt  template.py  templateSchema.txt
projectTemplates/: 6980.docx  bolt.docx  chemcola.docx  electricModule.py  exam.docx  examModule.py  gas.docx  gas_managent.py  grocery.py  groceryTables.py  gym_main.py  helper.py  jim_items_tables.py  main_custmer_table.py  main_gas.py  main_gas_file_1.py  main_gas_file_2.py  main_gas_file_3.py  main_tables.py  medicineStock.py  pettikadai.docx  phy0001.docx  phy0002.docx  phy0003.docx  phy0004.docx  sales.docx  salesMain.py  sathvik.docx  swiggy.docx  tables.py  user_id_table.py  velaikaran.docx  wegogym.docx
static/: script.js
templates/: index-new.html  index.html  source.html
