[tool.poetry]
name = "repl_nix_guruji"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Cors = "^3.0.10"
Flask = "^2.2.2"
python-docx = "^0.8.11"
sib-api-v3-sdk = "^7.5.0"
Pastebin = "^1.1.2"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
